--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -61,3 +61,10 @@ target_link_libraries(test_procshared_mem procshared_mem test_procshared_common 
 add_dependencies(build-test test_procshared_mem)
 add_test(NAME test_procshared_mem COMMAND $<TARGET_FILE:test_procshared_mem>)
 
+add_executable(test_offset_ptr EXCLUDE_FROM_ALL test_offset_ptr.cpp)
+target_include_directories(test_offset_ptr  PUBLIC ../inc  )
+target_link_libraries(test_offset_ptr gtest gtest_main )
+add_dependencies(build-test test_offset_ptr)
+add_test(NAME test_offset_ptr COMMAND $<TARGET_FILE:test_offset_ptr>)
+target_compile_features(test_offset_ptr PUBLIC cxx_std_20)
+target_compile_options(test_offset_ptr PUBLIC -fconcepts-diagnostics-depth=2)
