fix: build error by C++11

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -65,14 +65,6 @@ target_link_libraries(test_procshared_mem procshared_mem test_procshared_common 
 add_dependencies(build-test test_procshared_mem)
 add_test(NAME test_procshared_mem COMMAND $<TARGET_FILE:test_procshared_mem>)
 
-add_executable(test_offset_ptr EXCLUDE_FROM_ALL test_offset_ptr.cpp)
-target_include_directories(test_offset_ptr  PUBLIC ../inc  )
-target_link_libraries(test_offset_ptr gtest gtest_main )
-add_dependencies(build-test test_offset_ptr)
-add_test(NAME test_offset_ptr COMMAND $<TARGET_FILE:test_offset_ptr>)
-target_compile_features(test_offset_ptr PUBLIC cxx_std_20)
-target_compile_options(test_offset_ptr PUBLIC -fconcepts-diagnostics-depth=2)
-
 add_executable(test_procshared_krmalloc EXCLUDE_FROM_ALL test_procshared_krmalloc.cpp)
 target_include_directories(test_procshared_krmalloc  PUBLIC ../src  )
 target_link_libraries(test_procshared_krmalloc procshared_mem test_procshared_common gtest gtest_main )
@@ -85,11 +77,32 @@ target_link_libraries(test_procshared_malloc procshared_mem test_procshared_comm
 add_dependencies(build-test test_procshared_malloc)
 add_test(NAME test_procshared_malloc COMMAND $<TARGET_FILE:test_procshared_malloc>)
 
+add_executable(test_offset_ptr11 EXCLUDE_FROM_ALL test_offset_ptr.cpp)
+target_include_directories(test_offset_ptr11  PUBLIC ../inc  )
+target_link_libraries(test_offset_ptr11 gtest gtest_main )
+add_dependencies(build-test test_offset_ptr11)
+add_test(NAME test_offset_ptr11 COMMAND $<TARGET_FILE:test_offset_ptr11>)
+target_compile_features(test_offset_ptr11 PUBLIC cxx_std_11)
 
-add_executable(test_offset_based_unique_ptr EXCLUDE_FROM_ALL test_offset_based_unique_ptr.cpp)
-target_include_directories(test_offset_based_unique_ptr  PUBLIC ../inc  )
-target_link_libraries(test_offset_based_unique_ptr gtest gtest_main )
-add_dependencies(build-test test_offset_based_unique_ptr)
-add_test(NAME test_offset_based_unique_ptr COMMAND $<TARGET_FILE:test_offset_based_unique_ptr>)
-target_compile_features(test_offset_based_unique_ptr PUBLIC cxx_std_20)
-target_compile_options(test_offset_based_unique_ptr PUBLIC -fconcepts-diagnostics-depth=2)
+add_executable(test_offset_ptr20 EXCLUDE_FROM_ALL test_offset_ptr.cpp)
+target_include_directories(test_offset_ptr20  PUBLIC ../inc  )
+target_link_libraries(test_offset_ptr20 gtest gtest_main )
+add_dependencies(build-test test_offset_ptr20)
+add_test(NAME test_offset_ptr20 COMMAND $<TARGET_FILE:test_offset_ptr20>)
+target_compile_features(test_offset_ptr20 PUBLIC cxx_std_20)
+target_compile_options(test_offset_ptr20 PUBLIC -fconcepts-diagnostics-depth=2)
+
+add_executable(test_offset_based_unique_ptr11 EXCLUDE_FROM_ALL test_offset_based_unique_ptr.cpp)
+target_include_directories(test_offset_based_unique_ptr11  PUBLIC ../inc  )
+target_link_libraries(test_offset_based_unique_ptr11 gtest gtest_main )
+add_dependencies(build-test test_offset_based_unique_ptr11)
+add_test(NAME test_offset_based_unique_ptr11 COMMAND $<TARGET_FILE:test_offset_based_unique_ptr11>)
+target_compile_features(test_offset_based_unique_ptr11 PUBLIC cxx_std_11)
+
+add_executable(test_offset_based_unique_ptr20 EXCLUDE_FROM_ALL test_offset_based_unique_ptr.cpp)
+target_include_directories(test_offset_based_unique_ptr20  PUBLIC ../inc  )
+target_link_libraries(test_offset_based_unique_ptr20 gtest gtest_main )
+add_dependencies(build-test test_offset_based_unique_ptr20)
+add_test(NAME test_offset_based_unique_ptr20 COMMAND $<TARGET_FILE:test_offset_based_unique_ptr20>)
+target_compile_features(test_offset_based_unique_ptr20 PUBLIC cxx_std_20)
+target_compile_options(test_offset_based_unique_ptr20 PUBLIC -fconcepts-diagnostics-depth=2)
