--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,19 +36,17 @@ else()
   add_library(test_procshared_common STATIC test_procshared_common.cpp )
 endif()
 
-# add_executable(test_procshared_mem_both_highload EXCLUDE_FROM_ALL test_procshared_mem_both_highload.cpp)
-# target_link_libraries(test_procshared_mem_both_highload procshared_mem )
-# add_dependencies(build-test test_procshared_mem_both_highload)
-# # add_test(NAME test_procshared_mem_both_highload COMMAND $<TARGET_FILE:test_procshared_mem_both_highload>)
+add_executable(loadtest_procshared_mem_both_highload EXCLUDE_FROM_ALL test_procshared_mem_both_highload.cpp)
+target_link_libraries(loadtest_procshared_mem_both_highload procshared_mem )
+add_dependencies(build-test loadtest_procshared_mem_both_highload)
 
-# add_executable(test_procshared_mem_primary_highload EXCLUDE_FROM_ALL test_procshared_mem_primary_highload.cpp)
-# target_link_libraries(test_procshared_mem_primary_highload procshared_mem )
-# add_dependencies(build-test test_procshared_mem_primary_highload)
-# # add_test(NAME test_procshared_mem_primary_highload COMMAND $<TARGET_FILE:test_procshared_mem_primary_highload>)
+add_executable(loadtest_procshared_mem_primary_highload EXCLUDE_FROM_ALL test_procshared_mem_primary_highload.cpp)
+target_link_libraries(loadtest_procshared_mem_primary_highload procshared_mem )
+add_dependencies(build-test loadtest_procshared_mem_primary_highload)
 
-# add_executable(test_procshared_mem_secondary_highload EXCLUDE_FROM_ALL test_procshared_mem_secondary_highload.cpp)
-# target_link_libraries(test_procshared_mem_secondary_highload procshared_mem )
-# add_dependencies(build-test test_procshared_mem_secondary_highload)
+add_executable(loadtest_procshared_mem_secondary_highload EXCLUDE_FROM_ALL test_procshared_mem_secondary_highload.cpp)
+target_link_libraries(loadtest_procshared_mem_secondary_highload procshared_mem )
+add_dependencies(build-test loadtest_procshared_mem_secondary_highload)
 
 add_executable(test_procshared_mutex EXCLUDE_FROM_ALL test_procshared_mutex.cpp)
 target_link_libraries(test_procshared_mutex procshared_mem test_procshared_common gtest gtest_main )
@@ -64,6 +62,12 @@ add_executable(test_procshared_mem EXCLUDE_FROM_ALL test_procshared_mem.cpp)
 target_link_libraries(test_procshared_mem procshared_mem test_procshared_common gtest gtest_main )
 add_dependencies(build-test test_procshared_mem)
 add_test(NAME test_procshared_mem COMMAND $<TARGET_FILE:test_procshared_mem>)
+
+add_executable(test_procshared_mem_internal EXCLUDE_FROM_ALL test_procshared_mem_internal_idfile.cpp test_procshared_mem_internal_sem.cpp test_procshared_mem_internal_shm.cpp)
+target_include_directories( test_procshared_mem_internal  PRIVATE ../src )
+target_link_libraries(test_procshared_mem_internal procshared_mem test_procshared_common gtest gtest_main )
+add_dependencies(build-test test_procshared_mem_internal)
+add_test(NAME test_procshared_mem_internal COMMAND $<TARGET_FILE:test_procshared_mem_internal>)
 
 add_executable(test_procshared_krmalloc EXCLUDE_FROM_ALL test_procshared_krmalloc.cpp)
 target_include_directories(test_procshared_krmalloc  PUBLIC ../src  )
