--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,17 +69,17 @@ target_link_libraries(test_procshared_mem_internal procshared_mem test_procshare
 add_dependencies(build-test test_procshared_mem_internal)
 add_test(NAME test_procshared_mem_internal COMMAND $<TARGET_FILE:test_procshared_mem_internal>)
 
-add_executable(test_procshared_krmalloc EXCLUDE_FROM_ALL test_procshared_krmalloc.cpp)
-target_include_directories(test_procshared_krmalloc  PUBLIC ../src  )
-target_link_libraries(test_procshared_krmalloc procshared_mem test_procshared_common gtest gtest_main )
-add_dependencies(build-test test_procshared_krmalloc)
-add_test(NAME test_procshared_krmalloc COMMAND $<TARGET_FILE:test_procshared_krmalloc>)
+add_executable(test_offset_krmalloc EXCLUDE_FROM_ALL test_offset_krmalloc.cpp)
+target_include_directories(test_offset_krmalloc  PUBLIC ../src  )
+target_link_libraries(test_offset_krmalloc procshared_mem test_procshared_common gtest gtest_main )
+add_dependencies(build-test test_offset_krmalloc)
+add_test(NAME test_offset_krmalloc COMMAND $<TARGET_FILE:test_offset_krmalloc>)
 
-add_executable(test_procshared_malloc EXCLUDE_FROM_ALL test_procshared_malloc.cpp)
-target_include_directories(test_procshared_malloc  PUBLIC ../src  )
-target_link_libraries(test_procshared_malloc procshared_mem test_procshared_common gtest gtest_main )
-add_dependencies(build-test test_procshared_malloc)
-add_test(NAME test_procshared_malloc COMMAND $<TARGET_FILE:test_procshared_malloc>)
+add_executable(test_offset_mem_allocator EXCLUDE_FROM_ALL test_offset_mem_allocator.cpp)
+target_include_directories(test_offset_mem_allocator  PUBLIC ../src  )
+target_link_libraries(test_offset_mem_allocator procshared_mem test_procshared_common gtest gtest_main )
+add_dependencies(build-test test_offset_mem_allocator)
+add_test(NAME test_offset_mem_allocator COMMAND $<TARGET_FILE:test_offset_mem_allocator>)
 
 add_executable(test_offset_ptr11 EXCLUDE_FROM_ALL test_offset_ptr.cpp)
 target_include_directories(test_offset_ptr11  PUBLIC ../inc  )
