--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,5 +68,6 @@
         "variant": "cpp",
         "shared_mutex": "cpp"
     },
-    "testMate.cpp.test.executables": "**/{build,Build,BUILD,out,Out,OUT}/**/{test,Test,TEST}*"
+    "testMate.cpp.test.executables": "**/{build,Build,BUILD,out,Out,OUT}/**/{test,Test,TEST}*",
+    "C_Cpp.codeAnalysis.clangTidy.enabled": true
 }
