--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -94,7 +94,7 @@ target_link_libraries(test_offset_ptr20 gtest gtest_main )
 add_dependencies(build-test test_offset_ptr20)
 add_test(NAME test_offset_ptr20 COMMAND $<TARGET_FILE:test_offset_ptr20>)
 target_compile_features(test_offset_ptr20 PUBLIC cxx_std_20)
-target_compile_options(test_offset_ptr20 PUBLIC -fconcepts-diagnostics-depth=2)
+# target_compile_options(test_offset_ptr20 PUBLIC -fconcepts-diagnostics-depth=2)
 
 add_executable(test_offset_unique_ptr11 EXCLUDE_FROM_ALL test_offset_unique_ptr.cpp)
 target_include_directories(test_offset_unique_ptr11  PUBLIC ../inc  )
@@ -109,7 +109,7 @@ target_link_libraries(test_offset_unique_ptr20 gtest gtest_main )
 add_dependencies(build-test test_offset_unique_ptr20)
 add_test(NAME test_offset_unique_ptr20 COMMAND $<TARGET_FILE:test_offset_unique_ptr20>)
 target_compile_features(test_offset_unique_ptr20 PUBLIC cxx_std_20)
-target_compile_options(test_offset_unique_ptr20 PUBLIC -fconcepts-diagnostics-depth=2)
+# target_compile_options(test_offset_unique_ptr20 PUBLIC -fconcepts-diagnostics-depth=2)
 
 add_executable(test_offset_shared_ptr11 EXCLUDE_FROM_ALL test_offset_shared_ptr.cpp test_offset_weak_ptr.cpp test_offset_shared_weak_highload.cpp)
 target_include_directories(test_offset_shared_ptr11  PUBLIC ../inc  )
@@ -124,4 +124,4 @@ target_link_libraries(test_offset_shared_ptr20 procshared_mem gtest gtest_main )
 add_dependencies(build-test test_offset_shared_ptr20)
 add_test(NAME test_offset_shared_ptr20 COMMAND $<TARGET_FILE:test_offset_shared_ptr20>)
 target_compile_features(test_offset_shared_ptr20 PUBLIC cxx_std_20)
-target_compile_options(test_offset_shared_ptr20 PUBLIC -fconcepts-diagnostics-depth=2)
+# target_compile_options(test_offset_shared_ptr20 PUBLIC -fconcepts-diagnostics-depth=2)
