--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -75,11 +75,11 @@ target_link_libraries(test_offset_krmalloc procshared_mem test_procshared_common
 add_dependencies(build-test test_offset_krmalloc)
 add_test(NAME test_offset_krmalloc COMMAND $<TARGET_FILE:test_offset_krmalloc>)
 
-add_executable(test_offset_mem_allocator EXCLUDE_FROM_ALL test_offset_mem_allocator.cpp)
-target_include_directories(test_offset_mem_allocator  PUBLIC ../src  )
-target_link_libraries(test_offset_mem_allocator procshared_mem test_procshared_common gtest gtest_main )
-add_dependencies(build-test test_offset_mem_allocator)
-add_test(NAME test_offset_mem_allocator COMMAND $<TARGET_FILE:test_offset_mem_allocator>)
+add_executable(test_offset_malloc EXCLUDE_FROM_ALL test_offset_malloc.cpp)
+target_include_directories(test_offset_malloc  PUBLIC ../src  )
+target_link_libraries(test_offset_malloc procshared_mem test_procshared_common gtest gtest_main )
+add_dependencies(build-test test_offset_malloc)
+add_test(NAME test_offset_malloc COMMAND $<TARGET_FILE:test_offset_malloc>)
 
 add_executable(test_offset_ptr11 EXCLUDE_FROM_ALL test_offset_ptr.cpp)
 target_include_directories(test_offset_ptr11  PUBLIC ../inc  )
