fix: crash in destructor by changing resource release order

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -68,6 +68,14 @@ target_link_libraries(test_procshared_malloc procshared_mem test_procshared_comm
 add_dependencies(build-test test_procshared_malloc)
 add_test(NAME test_procshared_malloc COMMAND $<TARGET_FILE:test_procshared_malloc>)
 
+add_executable(loadtest_procshared_malloc_highload EXCLUDE_FROM_ALL test_procshared_malloc_highload.cpp)
+target_link_libraries(loadtest_procshared_malloc_highload procshared_mem )
+add_dependencies(build-test loadtest_procshared_malloc_highload)
+
+add_executable(loadtest_procshared_malloc_highload_sub EXCLUDE_FROM_ALL test_procshared_malloc_highload_sub.cpp)
+target_link_libraries(loadtest_procshared_malloc_highload_sub procshared_mem )
+add_dependencies(build-test loadtest_procshared_malloc_highload_sub)
+
 add_executable(test_procshared_mem_internal EXCLUDE_FROM_ALL test_procshared_mem_internal_idfile.cpp test_procshared_mem_internal_sem.cpp test_procshared_mem_internal_shm.cpp)
 target_include_directories( test_procshared_mem_internal  PRIVATE ../src )
 target_link_libraries(test_procshared_mem_internal procshared_mem test_procshared_common gtest gtest_main )
