--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -138,3 +138,19 @@ add_dependencies(build-test test_offset_shared_ptr20)
 add_test(NAME test_offset_shared_ptr20 COMMAND $<TARGET_FILE:test_offset_shared_ptr20>)
 target_compile_features(test_offset_shared_ptr20 PUBLIC cxx_std_20)
 # target_compile_options(test_offset_shared_ptr20 PUBLIC -fconcepts-diagnostics-depth=2)
+
+add_executable(test_offset_list11 EXCLUDE_FROM_ALL test_offset_list.cpp)
+target_include_directories(test_offset_list11  PUBLIC ../inc  )
+target_link_libraries(test_offset_list11 gtest gtest_main )
+add_dependencies(build-test test_offset_list11)
+add_test(NAME test_offset_list11 COMMAND $<TARGET_FILE:test_offset_list11>)
+target_compile_features(test_offset_list11 PUBLIC cxx_std_11)
+
+add_executable(test_offset_list20 EXCLUDE_FROM_ALL test_offset_list.cpp)
+target_include_directories(test_offset_list20  PUBLIC ../inc  )
+target_link_libraries(test_offset_list20 gtest gtest_main )
+add_dependencies(build-test test_offset_list20)
+add_test(NAME test_offset_list20 COMMAND $<TARGET_FILE:test_offset_list20>)
+target_compile_features(test_offset_unique_ptr20 PUBLIC cxx_std_20)
+# target_compile_options(test_offset_unique_ptr20 PUBLIC -fconcepts-diagnostics-depth=2)
+
