refactor: change filename from "procshare" to "ipsm"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
-project(libprocshared_mem CXX)
+project(libipsm_mem CXX)
 set(CMAKE_VERBOSE_MAKEFILE 1)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
@@ -18,15 +18,15 @@ enable_testing()
 file(GLOB SOURCES src/*.cpp )
 
 # GREETINGS_BUILD_SHARED_LIBSというオプションを作成。デフォルトをOFFに設定。
-option(PROCSHARED_BUILD_SHARED_LIBS "build procshared_mem as a shared library" OFF)
+option(IPSM_BUILD_SHARED_LIBS "build ipsm_mem as a shared library" OFF)
 
-if (PROCSHARED_BUILD_SHARED_LIBS)
-  add_library(procshared_mem SHARED ${SOURCES} )
+if (IPSM_BUILD_SHARED_LIBS)
+  add_library(ipsm_mem SHARED ${SOURCES} )
 else()
-  add_library(procshared_mem STATIC ${SOURCES} )
+  add_library(ipsm_mem STATIC ${SOURCES} )
 endif()
 
-target_include_directories( procshared_mem  PUBLIC inc )
-target_compile_options( procshared_mem  PRIVATE "-Werror" )
+target_include_directories( ipsm_mem  PUBLIC inc )
+target_compile_options( ipsm_mem  PRIVATE "-Werror" )
 
 add_subdirectory(test)
