--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -122,14 +122,14 @@ target_compile_features(test_offset_ptr20 PUBLIC cxx_std_20)
 
 add_executable(test_offset_unique_ptr11 EXCLUDE_FROM_ALL test_offset_unique_ptr.cpp)
 target_include_directories(test_offset_unique_ptr11  PUBLIC ../inc  )
-target_link_libraries(test_offset_unique_ptr11 gtest gtest_main )
+target_link_libraries(test_offset_unique_ptr11 ipsm_mem gtest gtest_main )
 add_dependencies(build-test test_offset_unique_ptr11)
 add_test(NAME test_offset_unique_ptr11 COMMAND $<TARGET_FILE:test_offset_unique_ptr11>)
 target_compile_features(test_offset_unique_ptr11 PUBLIC cxx_std_11)
 
 add_executable(test_offset_unique_ptr20 EXCLUDE_FROM_ALL test_offset_unique_ptr.cpp)
 target_include_directories(test_offset_unique_ptr20  PUBLIC ../inc  )
-target_link_libraries(test_offset_unique_ptr20 gtest gtest_main )
+target_link_libraries(test_offset_unique_ptr20 ipsm_mem gtest gtest_main )
 add_dependencies(build-test test_offset_unique_ptr20)
 add_test(NAME test_offset_unique_ptr20 COMMAND $<TARGET_FILE:test_offset_unique_ptr20>)
 target_compile_features(test_offset_unique_ptr20 PUBLIC cxx_std_20)
